<resources>
    <string name="app_name" translatable="false">GuessTheDrawing</string>
    <string name="store">Store</string>
    <string name="settings">Settings</string>
    <string name="play">Play</string>

    <string name="trueAnswer" translatable="false">TrueAnswer</string>
    <string name="falseAnswer" translatable="false">FalseAnswer</string>
    <string name="time">Time</string>
    <string name="guess">GUESS!</string>
    <string name="write_your_answer">write your answer</string>
    <string name="pictures" translatable="false">Pictures</string>
    <string name="try_again">TRY AGAIN!</string>
    <string name="start">START!</string>
    <string name="time_remaining">time remaining: %1$s sec</string>
    <string name="you_lost_coin">YOU LOST 1 COIN 😔</string>

    <string name="available_pictures">available %1$s / %2$s pictures</string>
    <string name="open_twenty_pictures">Open 20/40 pictures</string>
    <string name="open_thirty_pictures">Open 30/40 pictures</string>
    <string name="open_forty_pictures">Open 40/40 pictures</string>
    <string name="spend_40_coins">40 coins</string>
    <string name="spend_20_coins">20 coins</string>
    <string name="spend_30_coins">30 coins</string>

    <string name="music_volume">Music volume</string>
    <string name="effects_volume">Effects volume</string>
    <string name="difficult_level">Difficult Levels</string>
    <string name="normal">normal</string>
    <string name="choose_language">Choose language</string>
    <string name="russian">Russian</string>


    <string-array name="difficultyLevels">
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
    </string-array>

    <string-array name="languages">
        <item>English</item>
        <item>Русский</item>
    </string-array>


</resources>