<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.play_screen.HomeFragment">

    <ImageView
        android:id="@+id/iv_coin"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_coin"
        app:layout_constraintBottom_toTopOf="@+id/iv_picture"
        app:layout_constraintEnd_toStartOf="@+id/iv_picture"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <ImageView
        android:id="@+id/iv_picture"
        android:layout_width="269dp"
        android:layout_height="151dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/pictures"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        tools:src="@drawable/brain" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:format=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_indicator"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:max="15"
        android:progress="15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:trackCornerRadius="10dp">

    </com.google.android.material.progressindicator.LinearProgressIndicator>

    <View
        android:id="@+id/separator_main"
        style="@style/Divider"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_answer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:hint="@string/write_your_answer"
        android:minHeight="48dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_answer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_guess"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="130dp"
        android:text="@string/guess"
        android:textSize="24sp"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_answer"
        app:layout_constraintVertical_bias="0.254"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/purple_500"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_universal"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="40sp"
        tools:visibility="gone"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/purple_500"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/tv_lost_coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_lost_coin"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:alpha="0"
        tools:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btn_universal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_time_remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/time_remaining"
        app:layout_constraintBottom_toTopOf="@id/progress_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        tools:text="0"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_coin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_coin" />

    <TextView
        android:id="@+id/tv_coin_animated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+1"
        android:alpha="0"
        android:layout_marginTop="2dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/tv_coin"
        app:layout_constraintStart_toEndOf="@id/tv_coin"
        tools:ignore="HardcodedText" />


</androidx.constraintlayout.widget.ConstraintLayout>