<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings_screen.SettingsFragment">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_music_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/music_volume"
            android:textSize="18sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_music"
            android:layout_width="360dp"
            android:layout_height="6dp"
            android:labelFor="@id/tv_music_volume"
            android:stepSize="1"
            android:value="50"
            android:valueFrom="0"
            android:valueTo="100"
            app:labelBehavior="floating"
            tools:ignore="SpeakableTextPresentCheck" />
    </FrameLayout>

    <View
        android:id="@+id/separator2"
        style="@style/Divider"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="564dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/tv_effects_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/effects_volume"
            android:textSize="18sp" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_effects"
            android:layout_width="360dp"
            android:layout_height="match_parent"
            android:labelFor="@id/tv_music_volume"
            android:stepSize="1"
            android:value="50"
            android:valueFrom="0"
            android:valueTo="100"
            app:labelBehavior="floating"
            tools:ignore="SpeakableTextPresentCheck" />
    </FrameLayout>

    <View
        android:id="@+id/separator3"
        style="@style/Divider"
        android:layout_marginBottom="270dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
        app:layout_constraintVertical_bias="0.01999998" />


    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="@+id/separator3">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:hint="@string/difficult_level"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:startIconDrawable="@drawable/ic_fire">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:text="@string/normal"
                android:textColor="#757575"
                android:textSize="18sp"
                tools:ignore="LabelFor">

            </AutoCompleteTextView>
        </com.google.android.material.textfield.TextInputLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/testTW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3" />


</androidx.constraintlayout.widget.ConstraintLayout>